# battle-royale-2024

./: .gitignore  pyproject.toml  readme.md
battle_royale_2024/: __main__.py  cartoon.html.j2  news_article_to_cartoon.py  prompt.txt
