[tool.poetry]
name = "battle-royale-2024"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.1"
openai = "^1.8.0"
python-dotenv = "^1.0.0"
jinja2 = "^3.1.3"
html2text = "^2020.1.16"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
